增加员工接口

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
         <version>2.7.3</version>
+        <relativePath/>
     </parent>
     <groupId>com.sky</groupId>
     <artifactId>sky-take-out</artifactId>
